--- a/car_price_analysis.ipynb
+++ b/car_price_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 751,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,11 @@
     "from sklearn.preprocessing import MinMaxScaler, OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import cross_validate"
+    "from sklearn.linear_model import LinearRegression, Ridge\n",
+    "from sklearn.model_selection import cross_validate, GridSearchCV\n",
+    "from sklearn.metrics import make_scorer, mean_squared_error\n",
+    "\n",
+    "import lightgbm as lgb"
    ]
   },
   {
@@ -3900,23 +3903,314 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (3777871043.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[686], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    cars['model_top100'] = cars.query('model' isin top_100)\u001b[0m\n\u001b[0m                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_top125</th>\n",
+       "      <th>count</th>\n",
+       "      <th>percent</th>\n",
+       "      <th>cumulative_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>other</td>\n",
+       "      <td>45006</td>\n",
+       "      <td>12.709718</td>\n",
+       "      <td>12.709718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>golf</td>\n",
+       "      <td>29215</td>\n",
+       "      <td>8.250331</td>\n",
+       "      <td>20.960049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3er</td>\n",
+       "      <td>19744</td>\n",
+       "      <td>5.575716</td>\n",
+       "      <td>26.535765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>unknown</td>\n",
+       "      <td>19701</td>\n",
+       "      <td>5.563573</td>\n",
+       "      <td>32.099337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>polo</td>\n",
+       "      <td>13057</td>\n",
+       "      <td>3.687304</td>\n",
+       "      <td>35.786641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>corsa</td>\n",
+       "      <td>12559</td>\n",
+       "      <td>3.546668</td>\n",
+       "      <td>39.333309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>astra</td>\n",
+       "      <td>10800</td>\n",
+       "      <td>3.049926</td>\n",
+       "      <td>42.383234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>passat</td>\n",
+       "      <td>10137</td>\n",
+       "      <td>2.862694</td>\n",
+       "      <td>45.245928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>a4</td>\n",
+       "      <td>9894</td>\n",
+       "      <td>2.794071</td>\n",
+       "      <td>48.039999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>c_klasse</td>\n",
+       "      <td>8307</td>\n",
+       "      <td>2.345901</td>\n",
+       "      <td>50.385900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5er</td>\n",
+       "      <td>7861</td>\n",
+       "      <td>2.219950</td>\n",
+       "      <td>52.605851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>e_klasse</td>\n",
+       "      <td>6779</td>\n",
+       "      <td>1.914393</td>\n",
+       "      <td>54.520244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>a3</td>\n",
+       "      <td>6122</td>\n",
+       "      <td>1.728856</td>\n",
+       "      <td>56.249100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>focus</td>\n",
+       "      <td>5868</td>\n",
+       "      <td>1.657126</td>\n",
+       "      <td>57.906226</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>fiesta</td>\n",
+       "      <td>5771</td>\n",
+       "      <td>1.629733</td>\n",
+       "      <td>59.535959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>aygo</td>\n",
+       "      <td>429</td>\n",
+       "      <td>0.121150</td>\n",
+       "      <td>98.430418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>getz</td>\n",
+       "      <td>421</td>\n",
+       "      <td>0.118891</td>\n",
+       "      <td>98.549309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>601</td>\n",
+       "      <td>419</td>\n",
+       "      <td>0.118326</td>\n",
+       "      <td>98.667634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>combo</td>\n",
+       "      <td>417</td>\n",
+       "      <td>0.117761</td>\n",
+       "      <td>98.785395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>100</td>\n",
+       "      <td>417</td>\n",
+       "      <td>0.117761</td>\n",
+       "      <td>98.903156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>carisma</td>\n",
+       "      <td>414</td>\n",
+       "      <td>0.116914</td>\n",
+       "      <td>99.020070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>sl</td>\n",
+       "      <td>403</td>\n",
+       "      <td>0.113807</td>\n",
+       "      <td>99.133878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>cordoba</td>\n",
+       "      <td>399</td>\n",
+       "      <td>0.112678</td>\n",
+       "      <td>99.246555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>c2</td>\n",
+       "      <td>395</td>\n",
+       "      <td>0.111548</td>\n",
+       "      <td>99.358104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>c1</td>\n",
+       "      <td>390</td>\n",
+       "      <td>0.110136</td>\n",
+       "      <td>99.468240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>forfour</td>\n",
+       "      <td>386</td>\n",
+       "      <td>0.109007</td>\n",
+       "      <td>99.577246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>rio</td>\n",
+       "      <td>376</td>\n",
+       "      <td>0.106183</td>\n",
+       "      <td>99.683429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>jetta</td>\n",
+       "      <td>375</td>\n",
+       "      <td>0.105900</td>\n",
+       "      <td>99.789329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>cuore</td>\n",
+       "      <td>374</td>\n",
+       "      <td>0.105618</td>\n",
+       "      <td>99.894947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>altea</td>\n",
+       "      <td>372</td>\n",
+       "      <td>0.105053</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>125 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    model_top125  count    percent  cumulative_percent\n",
+       "0          other  45006  12.709718           12.709718\n",
+       "1           golf  29215   8.250331           20.960049\n",
+       "2            3er  19744   5.575716           26.535765\n",
+       "3        unknown  19701   5.563573           32.099337\n",
+       "4           polo  13057   3.687304           35.786641\n",
+       "5          corsa  12559   3.546668           39.333309\n",
+       "6          astra  10800   3.049926           42.383234\n",
+       "7         passat  10137   2.862694           45.245928\n",
+       "8             a4   9894   2.794071           48.039999\n",
+       "9       c_klasse   8307   2.345901           50.385900\n",
+       "10           5er   7861   2.219950           52.605851\n",
+       "11      e_klasse   6779   1.914393           54.520244\n",
+       "12            a3   6122   1.728856           56.249100\n",
+       "13         focus   5868   1.657126           57.906226\n",
+       "14        fiesta   5771   1.629733           59.535959\n",
+       "..           ...    ...        ...                 ...\n",
+       "110         aygo    429   0.121150           98.430418\n",
+       "111         getz    421   0.118891           98.549309\n",
+       "112          601    419   0.118326           98.667634\n",
+       "113        combo    417   0.117761           98.785395\n",
+       "114          100    417   0.117761           98.903156\n",
+       "115      carisma    414   0.116914           99.020070\n",
+       "116           sl    403   0.113807           99.133878\n",
+       "117      cordoba    399   0.112678           99.246555\n",
+       "118           c2    395   0.111548           99.358104\n",
+       "119           c1    390   0.110136           99.468240\n",
+       "120      forfour    386   0.109007           99.577246\n",
+       "121          rio    376   0.106183           99.683429\n",
+       "122        jetta    375   0.105900           99.789329\n",
+       "123        cuore    374   0.105618           99.894947\n",
+       "124        altea    372   0.105053          100.000000\n",
+       "\n",
+       "[125 rows x 4 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Create model feature with categories reduced to top 100 models\n",
-    "top_100 = freq_model.loc[0:99, 'model']\n",
+    "top_125 = freq_model.loc[0:124, 'model'].to_list()\n",
     "\n",
-    "cars['model_top100'] = cars.query('model' isin top_100)"
+    "def model_reduction(x):\n",
+    "    if x in top_125:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return 'other'\n",
+    "\n",
+    "cars['model_top125'] = cars['model'].apply(model_reduction)\n",
+    "\n",
+    "freq_model_top125 = freq_table(cars, 'model_top125')\n",
+    "display(freq_model_top125)"
    ]
   },
   {
@@ -5418,7 +5712,7 @@
     "* registration_year\n",
     "* gearbox\n",
     "* power\n",
-    "* model\n",
+    "* model_top125\n",
     "* mileage\n",
     "* registration_month\n",
     "* fuel_type\n",
@@ -5441,7 +5735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 728,
    "metadata": {},
    "outputs": [
     {
@@ -5650,7 +5944,7 @@
    ],
    "source": [
     "# Define features and target\n",
-    "features = cars.drop(['price', 'date_crawled', 'date_created', 'last_seen', 'postal_code', 'number_of_pictures'], axis=1)\n",
+    "features = cars.drop(['price', 'date_crawled', 'date_created', 'last_seen', 'postal_code', 'number_of_pictures', 'model_top125', 'model_top100'], axis=1)\n",
     "target = cars['price']\n",
     "\n",
     "print('Features:')\n",
@@ -5661,7 +5955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 676,
+   "execution_count": 729,
    "metadata": {},
    "outputs": [
     {
@@ -5691,67 +5985,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear Regression (base model)\n",
+    "### Define transformer and scorer\n",
     "\n",
-    "Fit linear regression and find RMSE as a baseline metric."
+    "Set up columns transformer for pipeline and scorer for cross validation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 682,
+   "execution_count": 756,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<265580x277 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 2119789 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Define numeric and categorical columns\n",
     "cols_numeric = ['registration_year', 'power', 'mileage']\n",
     "cols_categorical = ['vehicle_type', 'gearbox', 'model', 'registration_month', \n",
     "                    'fuel_type', 'brand', 'not_repaired', 'postal_code_trunc']\n",
     "\n",
+    "# Define transformer\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[('scaler', MinMaxScaler(), cols_numeric),\n",
-    "                  ('OHE', OneHotEncoder(handle_unknown='ignore'), cols_string)]\n",
-    ")"
+    "                  ('OHE', OneHotEncoder(handle_unknown='ignore'), cols_categorical)]\n",
+    ")\n",
+    "\n",
+    "# Defne scorer\n",
+    "RMSE = make_scorer(mean_squared_error, squared=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 678,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "pipe = Pipeline(steps=[('transform', preprocessor), ('model', LinearRegression())])\n",
-    "                \n",
-    "lr_cv = cross_validate(pipe, feat_train, targ_train, scoring='neg_root_mean_squared_error', cv=5)"
+    "### Linear Regression (base model)\n",
+    "\n",
+    "Fit standard, ridge, and lasso linear regression and calculate RMSE as a baseline metric."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Standard linear regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 746,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2883.00274147 -2887.80645721 -2862.96764406 -2843.62502288\n",
-      " -2889.21523912]\n",
-      "-2873.3234209488196\n"
+      "11.3 s ± 0 ns per loop (mean ± std. dev. of 1 run, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "print(lr_cv['test_score'])\n",
-    "print(lr_cv['test_score'].mean())"
+    "%%timeit -r 1 -n 1\n",
+    "pipe = Pipeline(steps=[('transform', preprocessor), ('model', LinearRegression())])\n",
+    "                \n",
+    "linreg_cv = cross_validate(pipe, feat_train, targ_train, scoring=RMSE, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 743,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2846.32558596 2846.13729424 2825.26990303 2805.61044299 2842.85021437]\n",
+      "2833.2386881195953\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(linreg_cv['test_score'])\n",
+    "print(linreg_cv['test_score'].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Ridge regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 763,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = Pipeline(steps=[('transform', preprocessor), ('model', Ridge())])\n",
+    "\n",
+    "grid = {\n",
+    "    'model__alpha':np.arange(0, 2.1, .1)\n",
+    "}\n",
+    "\n",
+    "ridge_cv = GridSearchCV(pipe, param_grid=grid, scoring=RMSE, cv=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 767,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'GridSearchCV' object has no attribute 'best_score_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[767], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# print(ridge_cv.best_params_)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(ridge_cv\u001b[39m.\u001b[39;49mbest_score_)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'GridSearchCV' object has no attribute 'best_score_'"
+     ]
+    }
+   ],
+   "source": [
+    "# print(ridge_cv.best_params_)\n",
+    "print(ridge_cv.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Lasso regression"
    ]
   }
  ],
