--- a/notebooks/car_price_analysis.ipynb
+++ b/notebooks/car_price_analysis.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# **Predicting Used Car Price**<a id='home'></a>\n",
     "\n",
-    "**Background:** Rusty Bargain used cars is developing an app where customers can quickly find the market value of their car. This app needs to be both accurate and efficient. \n",
+    "**Background:** Rusty Bargain used cars is developing an app where customers can quickly find the market value of their car. The app needs to be both accurate and efficient. \n",
     "\n",
-    "**Purpose:** Fit a regression model that accurately and quickly predicts the market value of a new customer's car.\n",
+    "**Purpose:** Train a regression model that accurately and quickly predicts the market value of a new customer's car minimizing RMSE.\n",
     "\n",
     "**Techniques:** One Hot Encoding, Pipelines, GridSearchCV, Gradient Boosting with CatBoost and LightGBM.\n",
     "\n",
@@ -64,7 +64,6 @@
     "\n",
     "# Gradient boosting\n",
     "from catboost import CatBoostRegressor, Pool\n",
-    "from xgboost import XGBRegressor\n",
     "import lightgbm as lgb"
    ]
   },
